# vampires_control

./: .gitignore  LICENSE  Makefile  README.md  genindex.html  gettingstarted.html  index.html  installation.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: CI.yml  docs.yml
_sources/: installation.md.txt
_sources/api/: api.md.txt  index.md.txt
_sources/observing/: calibrations.md.txt  general_observing.md.txt  polarimetry.md.txt  sdi.md.txt
_sources/operating/: cameras.md.txt  sam.md.txt  viewers.md.txt
_sources/procedures/: autofocus.md.txt
api/: api.html  environment_variables.html  index.html
conf/: .gitignore  conf_beamsplitter.json  conf_pupil_wheel.json  conf_vampires_beamsplitter.txt  conf_vampires_diffwheel.txt  default_vampires_state.json  device_addresses.json  vampires_state.json
conf/daemons/: vampires_mprocs.yml  vampires_qwpd.service
conf/data/: conf_vampires_qwp_filter_data.csv
conf/devices/: conf_diffwheel.json  conf_pupil_wheel.json  conf_qwp.json  device_addresses.json
conf/services/: focus_daemon.service  vampires_focus_daemon.service  vampiresd.service
docs/: conf.py  gettingstarted.md  index.rst  installation.md
docs/api/: environment_variables.md
docs/observing/: calibrations.md  data.md  faq.md  polarimetry.md  sdi.md  singlecam.md  sorting.md
docs/operating/: calibrations.md  cameras.md  coronagraphs.md  coronagraphy.md  data.md  devices.md  index.md  layout.md  spectral.md  troubleshooting.md
docs/procedures/: autofocus.md  coronagraphs.md  data.md  mbi.md
observing/: calibrations.html  general_observing.html  polarimetry.html  sdi.html  singlecam.html
operating/: cameras.html  coronagraphs.html  data.html  devices.html  layout.html  polarimetry.html  sam.html  spectral.html  troubleshooting.html  viewers.html
procedures/: autofocus.html  coronagraphs.html  data.html  mbi.html
scripts/: conex  vampires  vampires_beamsplitter  vampires_diffwheel  vampires_focus  vampires_nominal  vampires_pupil  vampires_qwp  vampires_status  vampiresd  zaber
src/vampires_control/: __init__.py  autofocus.py  autofocus_fieldstop.py  cameras.py  centroid.py  configurations.py  coralign.py  filters.py  health.py  helpers.py  hotspot.py  launch.py  paths.py  plotting.py  status.py  strehl.py  synthpsf.py
src/vampires_control/acquisition/: __init__.py  acquire.py  blocked_acquisition.py  free_acquisition.py  main.py  manager.py  sdi_daemon.py
src/vampires_control/calibration/: bs_throughput.py  calibs.py  darks.py  drr_calibration.py  filter_sweep.py  hwp_calibration.py  iwa.py  lp_calibration.py  nbfilter_sweep.py  nightly_darks.py  photon_transfer_curve.py  pinhole_focus.py  polarization_calibration.py  qwp_calibration.py
src/vampires_control/cli/: find_dark_settings.py  vampires_nominal.py  vampires_status.py
src/vampires_control/configurations/: configurations.py  main.py
src/vampires_control/daemons/: __init__.py  qwp_daemon.py  sdi_daemon.py  status.py  temp_poll_daemon.py
src/vampires_control/fpwfs/fast_furious/: core_algorithm.py  main.py
src/vampires_control/gen2/: main.py
src/vampires_control/gen2/cams/: VAMPIRES.py
src/vampires_control/status/: camstatus.py  healthcheck.py  status.py
vampires_control/: config.py  devices.py  server.py  state.py
vampires_control/cli/: vampires.py  vampires_beamsplitter.py  vampires_config.py  vampires_diffwheel.py  vampires_focus.py  vampires_nominal.py  vampires_pupil.py  vampires_qwp.py  vampires_status.py  vampiresd.py
vampires_control/cli/deprecated/: conex.py  zaber.py
vampires_control/daemons/: focus_daemon.py  qwp_daemon.py  vampiresd.py
vampires_control/deprecated/: conex.py
vampires_control/devices/: conex.py  devices.py  focus.py  plugins.py  qwp.py  zaber.py
vampires_control/devices/drivers/: conex.py  zaber.py
