[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vampires_control"
description = "VAMPIRES control software"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Miles Lucas", email = "mdlucas@hawaii.edu"}]
requires-python = ">=3.7"
dependencies = [
    "docopt",
    "numpy",
    "scikit-image",
    "scxconf",
    "swmain",
    "scxkw",
    "tqdm",
    "device_control",
    "rich",
    "pyzmq",
    "paramiko",
    "trogon",
    "pyyaml",
    "pydantic"
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
docs = ["sphinx", "sphinx-rtd-theme", "myst-parser", "sphinx-autobuild", "sphinxcontrib-plantuml"]

[project.scripts]
launch_daemons = "vampires_control.launch:main"
qwp_daemon = "vampires_control.daemons.qwp_daemon:main"
vampires_temp_daemon = "vampires_control.daemons.temp_poll_daemon:main"
vampires_status = "vampires_control.status.status:main"
# camera control
get_tint = "vampires_control.cameras:get_tint"
set_tint = "vampires_control.cameras:set_tint"
target_tint = "vampires_control.cameras:target_tint"
get_fps = "vampires_control.cameras:get_fps"
set_fps = "vampires_control.cameras:set_fps"
get_trigger = "vampires_control.cameras:get_trigger"
set_trigger = "vampires_control.cameras:set_trigger"
get_readout_mode = "vampires_control.cameras:get_readout_mode"
set_readout_mode = "vampires_control.cameras:set_readout_mode"
get_mode = "vampires_control.cameras:get_mode"
set_mode = "vampires_control.cameras:set_mode"
# logging
set_datatype = "vampires_control.acquisition.acquire:set_datatype_main"
startlog = "vampires_control.acquisition.acquire:start_acquisition_main"
stoplog = "vampires_control.acquisition.acquire:stop_acquisition_main"
resumelog = "vampires_control.acquisition.acquire:resume_acquisition_main"
pauselog = "vampires_control.acquisition.acquire:pause_acquisition_main"
# configurations
vampires_prep = "vampires_control.configurations.main:main"
# health
healthcheck = "vampires_control.status.healthcheck:main"
# calibrations
autofocus = "vampires_control.autofocus:autofocus"
take_cals = "vampires_control.calibration.calibs:main"
filter_sweep = "vampires_control.calibration.filter_sweep:main"
iwa_scan = "vampires_control.calibration.iwa:main"
sdi_daemon = "vampires_control.acquisition.sdi_daemon:main"
pol_calib = "vampires_control.calibration.polarization_calibration:main"
drr_calib = "vampires_control.calibration.drr_calibration:main"

[tool.setuptools.dynamic]
version = {attr = "vampires_control.__version__"}

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "DEBUG"
log_cli_format = "[%(levelname)s] (%(name)-15s) %(message)s"

[tool.coverage.run]
source = ["vampires_control"]